--- a/src/components/app/App.module.css
+++ b/src/components/app/App.module.css
@@ -1,6 +1,6 @@
-.App {
+.app {
     display: grid;
     grid-template-columns: 1fr;
-    grid-gap: 14px;
-    padding-bottom: 14px;
+    grid-gap: 16px;
+    padding-bottom: 24px;
 }
