--- a/src/components/searchbar/Searchbar.module.css
+++ b/src/components/searchbar/Searchbar.module.css
@@ -1,12 +1,3 @@
-.form{
-    display: flex;
-    align-items: center;
-    width: 100%;
-    max-width: 600px;
-    background-color: #fff;
-    border-radius: 3px;
-    overflow: hidden;
-}
 .searchbar {
     top: 0;
     left: 0;
@@ -18,47 +9,29 @@
     min-height: 64px;
     padding-right: 24px;
     padding-left: 24px;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding-top: 12px;
+    padding-bottom: 12px;
     color: #fff;
     background-color: #3f51b5;
     box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),
-        0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12); 
+        0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
 }
-.icon {    
-    top: 0;
-    left: 320px;
-    width: 40px;
-    height: 100%;
+
+.searchForm {
     display: flex;
     align-items: center;
-    justify-content: center;
+    width: 100%;
+    max-width: 600px;
+    background-color: #fff;
+    border-radius: 3px;
+    overflow: hidden;
 }
 
-.icon::before {
-    position: absolute;
-    content: '';
-    width: 13px;
-    height: 13px;
-    border: 3px solid #737070;
-    border-radius: 50px;
-    transform: translate(-2px, -2px);
-}
-
-.icon::after {
-    position: absolute;
-    content: '';
-    width: 3px;
-    height: 9px;
-    background: #737070;
-    transform: translate(5px, 5px) rotate(-45deg);
-}
-.button{
+.searchFormButton {
     display: inline-block;
     width: 48px;
     height: 48px;
-    border: 0;    
-    background-size: 40%;
+    border: 0;
     background-repeat: no-repeat;
     background-position: center;
     opacity: 0.6;
@@ -66,31 +39,41 @@
     cursor: pointer;
     outline: none;
 }
-.button:hover {
+
+.searchFormButton:hover {
     opacity: 1;
 }
 
-.button:hover .icon::before,
-.button:focus .icon::before{
-    border: 3px solid #000;
+.searchFormButtonLabel {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    clip-path: inset(50%);
+    border: 0;
 }
 
-.button:hover .icon::after,
-.button:focus .icon::after {
-    background: #000;
+.searchFormButtonIcon {
+    width: 20px;
+    height: 20px;
+    fill: #000;
 }
 
-
-.input {
+.searchFormInput {
+    display: inline-block;
     width: 100%;
-    color: #000;
-    padding: 0 10px;
-    font-size: 18px;
-}
-.input:focus {
+    font: inherit;
+    font-size: 20px;
+    border: none;
     outline: none;
+    padding-left: 10px;
+    padding-right: 4px;
 }
-.input::placeholder {
+
+.searchFormInput::placeholder {
     font: inherit;
     font-size: 18px;
 }
