--- a/src/components/imageGallery/ImageGallery.module.css
+++ b/src/components/imageGallery/ImageGallery.module.css
@@ -1,4 +1,4 @@
-.gallery {
+.imageGallery {
     display: grid;
     max-width: calc(100vw - 48px);
     grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
@@ -9,7 +9,4 @@
     list-style: none;
     margin-left: auto;
     margin-right: auto;
-}
-.container-center {
-    margin: 0 auto;
 }
