--- a/src/components/loader/Loader.module.css
+++ b/src/components/loader/Loader.module.css
@@ -1,6 +1,3 @@
-.loader{
-    height: 80px;
-    width: 80px;
-    border-radius: 9px;
-    color: #4fa94d;
+.loader {
+    justify-self: center;
 }
