--- a/src/components/modal/Modal.module.css
+++ b/src/components/modal/Modal.module.css
@@ -1,18 +1,19 @@
 .overlay {
     position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgba(0, 0, 0, 0.8);
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background: rgba(0, 0, 0, .8);
+    transition: opacity .4s ease;
     z-index: 1200;
+    will-change: opacity;
 }
 
 .modal {
-    max-width: calc(100vw - 150px);
-    max-height: calc(100vh - 80px);
-    overflow: hidden;
+    max-width: calc(100vw - 92px);
+    max-height: calc(100vh - 48px);
 }
