--- a/src/index.css
+++ b/src/index.css
@@ -1,49 +1,35 @@
-*,
-*::before,
-*::after{
-    padding: 0;
-    margin: 0;
-    border: 0;
-    box-sizing: border-box;
-}
-a {
-    text-decoration: none;
-    color: inherit;
-}
-ul,
-ol,
-li {
-    list-style: none;
-}
-img {
-    display: block;
-        max-width: 100%;
-        height: auto;
-        object-fit: cover;
-}
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    font-weight: inherit;
-    font-size: inherit;
-}
-html,
-body {
-   
-    line-height: 1;
-}
-textarea,
-button,
-input {
-    font-weight: inherit;
-    font-size: inherit;
-    color: inherit;
-    font-family: inherit;
-}
-button {
-    cursor: pointer;
+@import-normalize; /* bring in normalize.css styles */
+
+html {
+  box-sizing: border-box;
+  width: 100vw;
+  overflow-x: hidden;
 }
 
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
+  color: #212121;
+  background-color: #fff;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+p {
+  font-size: 18px;
+  font-weight: 600;
+  text-align: center;
+}
