--- a/src/components/searchbar/Searchbar.module.css
+++ b/src/components/searchbar/Searchbar.module.css
@@ -16,7 +16,6 @@
     box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),
         0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
 }
-
 .searchForm {
     display: flex;
     align-items: center;
@@ -27,11 +26,14 @@
     overflow: hidden;
 }
 
-.searchFormButton {
+.searchForm_button {
     display: inline-block;
     width: 48px;
     height: 48px;
     border: 0;
+    padding: 0;
+    background-image: url('https://image.flaticon.com/icons/svg/149/149852.svg');
+    background-size: 40%;
     background-repeat: no-repeat;
     background-position: center;
     opacity: 0.6;
@@ -40,40 +42,17 @@
     outline: none;
 }
 
-.searchFormButton:hover {
+.searchForm_button:hover {
     opacity: 1;
 }
 
-.searchFormButtonLabel {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    padding: 0;
-    overflow: hidden;
-    clip: rect(0, 0, 0, 0);
-    white-space: nowrap;
-    clip-path: inset(50%);
-    border: 0;
-}
-
-.searchFormButtonIcon {
-    width: 20px;
-    height: 20px;
-    fill: #000;
-}
-
-.searchFormInput {
+.searchForm_input {
     display: inline-block;
     width: 100%;
     font: inherit;
     font-size: 20px;
     border: none;
     outline: none;
-    padding-left: 10px;
+    padding-left: 4px;
     padding-right: 4px;
-}
-
-.searchFormInput::placeholder {
-    font: inherit;
-    font-size: 18px;
 }
