--- a/src/components/modal/Modal.module.css
+++ b/src/components/modal/Modal.module.css
@@ -12,6 +12,7 @@
 }
 
 .modal {
-    max-width: calc(100vw - 48px);
-    max-height: calc(100vh - 24px);
+    max-width: calc(100vw - 150px);
+    max-height: calc(100vh - 80px);
+    overflow: hidden;
 }
