--- a/src/components/searchbar/Searchbar.module.css
+++ b/src/components/searchbar/Searchbar.module.css
@@ -1,3 +1,12 @@
+.form{
+    display: flex;
+    align-items: center;
+    width: 100%;
+    max-width: 600px;
+    background-color: #fff;
+    border-radius: 3px;
+    overflow: hidden;
+}
 .searchbar {
     top: 0;
     left: 0;
@@ -9,30 +18,46 @@
     min-height: 64px;
     padding-right: 24px;
     padding-left: 24px;
-    padding-top: 12px;
-    padding-bottom: 12px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     color: #fff;
     background-color: #3f51b5;
     box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),
-        0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
+        0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12); 
 }
-.searchForm {
+.icon {    
+    top: 0;
+    left: 320px;
+    width: 40px;
+    height: 100%;
     display: flex;
     align-items: center;
-    width: 100%;
-    max-width: 600px;
-    background-color: #fff;
-    border-radius: 3px;
-    overflow: hidden;
+    justify-content: center;
 }
 
-.searchForm_button {
+.icon::before {
+    position: absolute;
+    content: '';
+    width: 13px;
+    height: 13px;
+    border: 3px solid #737070;
+    border-radius: 50px;
+    transform: translate(-2px, -2px);
+}
+
+.icon::after {
+    position: absolute;
+    content: '';
+    width: 3px;
+    height: 9px;
+    background: #737070;
+    transform: translate(5px, 5px) rotate(-45deg);
+}
+.button{
     display: inline-block;
     width: 48px;
     height: 48px;
-    border: 0;
-    padding: 0;
-    background-image: url('https://image.flaticon.com/icons/svg/149/149852.svg');
+    border: 0;    
     background-size: 40%;
     background-repeat: no-repeat;
     background-position: center;
@@ -41,18 +66,31 @@
     cursor: pointer;
     outline: none;
 }
-
-.searchForm_button:hover {
+.button:hover {
     opacity: 1;
 }
 
-.searchForm_input {
-    display: inline-block;
+.button:hover .icon::before,
+.button:focus .icon::before{
+    border: 3px solid #000;
+}
+
+.button:hover .icon::after,
+.button:focus .icon::after {
+    background: #000;
+}
+
+
+.input {
     width: 100%;
-    font: inherit;
-    font-size: 20px;
-    border: none;
+    color: #000;
+    padding: 0 10px;
+    font-size: 18px;
+}
+.input:focus {
     outline: none;
-    padding-left: 4px;
-    padding-right: 4px;
+}
+.input::placeholder {
+    font: inherit;
+    font-size: 18px;
 }
